@@ -1,11 +1,11 @@
 built_text = \
 	0.7.5 0.7.6 \
-	0.8.0 0.8.1 0.8.2 0.8.3 0.8.4 0.8.5 0.8.6
+	0.8.0 0.8.1 0.8.2 0.8.3 0.8.4 0.8.5 0.8.6 0.8.7
 built_pages = \
 	0.6.5.html \
 	0.7.3.html 0.7.4.html 0.7.5.html 0.7.6.html \
 	0.8.0.html 0.8.1.html 0.8.2.html 0.8.3.html 0.8.4.html \
-	0.8.5.html 0.8.6.html \
+	0.8.5.html 0.8.6.html 0.8.7.html \
 	$(built_text)
 
 style = ../releases.xsl
